--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="src/styles.css" />
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <title>Weather app</title>
     <script
@@ -40,9 +40,8 @@
               />
             </div>
             <div class="search">
-              <input type="submit" value="search" class="search-btn"/>
-              <input type="button" value="current" class="current-btn"/>
-    
+              <input type="submit" value="search" class="search-btn" />
+              <input type="button" value="current" class="current-btn" />
             </div>
           </form>
 
@@ -167,7 +166,11 @@
           </div>
         </div>
       </div>
+      <div class="open-source"><a href="https://github.com/SivEngOrn/weather-app" target="_blank" >Open-source code </a> by SivEng</div>
     </div>
-    <script src="script.js"></script>
+
+    
+
+    <script src="src/script.js"></script>
   </body>
 </html>
