--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <i class="fa-solid fa-wind"></i>
               <p>Wind</p>
               <br />
-              <p><span id="wind-speed"></span> m/s</p>
+              <p><span id="wind-speed"></span> km/h</p>
             </div>
             <div class="Humidity">
               <i class="fa-solid fa-droplet"></i>
@@ -97,77 +97,8 @@
           </div>
         </div>
       </div>
-      <div class="row test">
-        <div class="col">
-          <p class="day">Mon</p>
-          <div class="temp">
-            <img
-              src="images/weather icons/wsymbol_0001_sunny.svg"
-              alt=""
-              class="weather-icon"
-            />
-            <div>
-              <p class="high">21°</p>
-              <p>20°</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <p class="day">Tue</p>
-          <div class="temp">
-            <img
-              src="images/weather icons/wsymbol_0003_white_cloud.svg"
-              alt=""
-              class="weather-icon"
-            />
-            <div>
-              <p class="high">22°</p>
-              <p>20°</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <p class="day">Wed</p>
-          <div class="temp">
-            <img
-              src="images/weather icons/wsymbol_0002_sunny_intervals.svg"
-              alt=""
-              class="weather-icon"
-            />
-            <div>
-              <p class="high">21°</p>
-              <p>20°</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <p class="day">Thur</p>
-          <div class="temp">
-            <img
-              src="images/weather icons/wsymbol_0009_light_rain_showers.svg"
-              alt=""
-              class="weather-icon"
-            />
-            <div>
-              <p class="high">23°</p>
-              <p>20°</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <p class="day">Fri</p>
-          <div class="temp">
-            <img
-              src="images/weather icons/wsymbol_0001_sunny.svg"
-              alt=""
-              class="weather-icon"
-            />
-            <div>
-              <p class="high">24°</p>
-              <p>20°</p>
-            </div>
-          </div>
-        </div>
+      <div id="forecast">
+      
       </div>
       <div class="open-source"><a href="https://github.com/SivEngOrn/weather-app" target="_blank" >Open-source code </a> by SivEng</div>
     </div>
